--- a/public/SaasFE/css/common.css
+++ b/public/SaasFE/css/common.css
@@ -13,7 +13,7 @@ body {
 }
 
 
-/* ==== start 重置select样式 */
+/* ==== start 重置表单样式 */
 
 .layui-input-block {
     min-height: 26px;
@@ -22,16 +22,41 @@ body {
 .layui-form-label {
     padding-top: 0;
     padding-bottom: 0;
-    line-height: 26px;
+    line-height: 24px;
 }
 
 .layui-input {
     height: 26px;
-    line-height: 26px;
+    line-height: 24px;
+}
+
+.layui-unselect[lay-skin=primary] i,
+.layui-unselect[lay-skin=primary]:hover i {
+    border-color: #eee;
+}
+
+.layui-form-checked[lay-skin=primary] i,
+.layui-form-checked[lay-skin=primary]:hover i {
+    border-color: #2681dc;
+    background-color: #fff;
+    color: #2681dc;
+}
+
+.popup-wrapper .layui-form-item .layui-form-checkbox[lay-skin=primary] {
+    margin-bottom: 10px;
+}
+
+.layui-form-select dl dd,
+.layui-form-select dl dt {
+    line-height: 30px;
+}
+
+.layui-form-select dl dd.layui-this {
+    background: #d9e8f7;
 }
 
 
-/* ==== end 重置select样式 */
+/* ==== end 重置表单样式 */
 
 
 /* ==== start 表格样式重置 */
@@ -65,3 +90,107 @@ body {
 
 
 /* ==== end 表格样式重置 */
+
+
+/*下拉菜单覆盖*/
+
+.layui-form-select dl {
+    top: 30px;
+}
+
+.layui-form-select dl dd {
+    line-height: 25px;
+}
+
+
+/* tab切换  在包含tab的样式上加nor-tab*/
+
+.nor-tab>.layui-tab-title {
+    height: 37px;
+    border: none;
+}
+
+.nor-tab>.layui-tab-title .layui-this {
+    color: #fff;
+    background-color: #11A6F8;
+    border: 1px solid #11A6F8;
+}
+
+.nor-tab>.layui-tab-title .layui-this:after {
+    position: absolute;
+    top: 21px;
+    left: 50%;
+    margin-left: -8px;
+    width: 0px;
+    height: 0px;
+    border-width: 8px;
+    border-style: solid;
+    border-color: transparent transparent #fff transparent;
+}
+
+.nor-tab>.layui-tab-title li {
+    margin-left: -1px;
+    line-height: 35px;
+    border: 1px solid #ccc;
+    background-color: #f8f8f8;
+    border-radius: 1px;
+}
+
+
+/* ==== start 翻页样式重置 */
+
+.layui-laypage a,
+.layui-laypage button,
+.layui-laypage input,
+.layui-laypage select,
+.layui-laypage span {
+    border: 0;
+}
+
+.layui-laypage .layui-laypage-curr .layui-laypage-em {
+    background: #BEDBF7;
+    color: #fff;
+    width: 22px;
+    height: 22px;
+    border-radius: 11px;
+    top: 2px;
+    margin: 0 auto;
+    display: inline-block;
+}
+
+.layui-laypage a,
+.layui-laypage span {
+    text-align: center;
+    padding: 0 11px;
+    margin: 0 auto;
+    display: inline-block;
+}
+
+.layui-laypage .layui-laypage-curr em {
+    display: inline-block;
+    margin: 0 auto;
+    width: 24px;
+    height: 24px;
+    text-align: center;
+}
+
+.layui-laypage .layui-laypage-curr .layui-laypage-em {
+    left: auto;
+}
+
+.layui-laypage input,
+.layui-laypage-btn,
+.layui-laypage button {
+    border: 1px solid #2681DC;
+    color: #2681DC;
+    vertical-align: middle;
+    height: 22px;
+    line-height: 22px;
+}
+
+.layui-laypage input {
+    width: 24px;
+}
+
+
+/* ==== end 翻页样式重置 */
